<resources>
    <string name="app_name">Warsong1</string>
    <string name="Earth_Boss">Earth Boss</string>
    <string name="Fire_Boss">Fire Boss</string>
    <string name="Water_Boss">Water Boss</string>
    <string name="Metal_Boss">Metal Boss</string>
    <string name="Wood_Boss">Wood Boss</string>
    <string name="Incarcerate">Incarcerate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="metal_Boss">Metal Boss</string>
    <string name="Warsong">Warsong</string>
    <string name="title_activity_earth_boss">EarthBoss</string>
    <string name="title_activity_metal_boss">MetalBoss</string>
    <string name="title_activity_fire_boss">FireBoss</string>
    <string name="title_activity_water_boss">WaterBoss</string>
    <string name="title_activity_woos">Woos</string>
    <string name="title_activity_incarcerate">Incarcerate</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
