<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/Warsong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textIsSelectable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Earth_Boss"
        android:id="@+id/EarthBoss"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textView"
       />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Metal_Boss"
        android:id="@+id/metal"
        android:layout_below="@+id/EarthBoss"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fire_Boss"
        android:id="@+id/fire"
        android:layout_below="@+id/metal"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Water_Boss"
        android:id="@+id/water"
        android:layout_below="@+id/fire"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wood_Boss"
        android:id="@+id/woos"
        android:layout_below="@+id/water"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Incarcerate"
        android:id="@+id/incarcerate"
        android:layout_below="@+id/woos"
        android:layout_alignParentStart="true" />

</RelativeLayout>
